--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -4,24 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".verificacion_phone"
-    android:background="@color/pinkColor">
+    android:background="@color/pinkColor"
+    tools:context=".verificacion_phone">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="450dp"
         android:layout_marginTop="228dp"
         android:background="@drawable/container"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.7">
+        app:layout_constraintVertical_bias="1.0">
 
         <EditText
             android:id="@+id/txt_seis"
             android:layout_width="50dp"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
@@ -37,7 +39,7 @@
         <EditText
             android:id="@+id/txt_cinco"
             android:layout_width="50dp"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
@@ -53,24 +55,23 @@
         <EditText
             android:id="@+id/txt_tres"
             android:layout_width="50dp"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
+            android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
             android:maxLength="1"
-            android:background="@drawable/bordes"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.044"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.449"
-            />
+            app:layout_constraintVertical_bias="0.449" />
 
         <EditText
             android:id="@+id/txt_cuatro"
             android:layout_width="50dp"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
@@ -89,7 +90,7 @@
             android:layout_height="wrap_content"
             android:onClick="lanzar"
             android:text="Continuar"
-            android:textSize="16sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
@@ -101,7 +102,7 @@
         <EditText
             android:id="@+id/txt_uno"
             android:layout_width="50dp"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
@@ -117,7 +118,7 @@
         <EditText
             android:id="@+id/txt_dos"
             android:layout_width="50dp"
-            android:layout_height="90dp"
+            android:layout_height="85dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
@@ -130,5 +131,43 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.453" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/txt"
+
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="188dp"
+        android:layout_marginEnd="188dp"
+
+        android:text="Verificación"
+        android:textColor="@color/white"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.424"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.074" />
+
+    <TextView
+        android:id="@+id/txt_verificacion"
+        android:layout_width="350dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="10dp"
+        android:gravity="center"
+        android:text="Por favor, escriba el  código de verificación enviando al +5959863935   "
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.202" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
