--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -68,7 +68,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/borde"
+            android:background="@drawable/search_edittext_background"
             android:padding="8dp"
             android:paddingStart="20dp"
             android:text="Categorias"
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
-            android:background="@drawable/borde"
+            android:background="@drawable/search_edittext_background"
             android:padding="8dp"
             android:paddingStart="18dp"
             android:text="Promos"
