--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -21,9 +21,10 @@
         app:layout_constraintVertical_bias="1.0">
 
         <EditText
-            android:id="@+id/txt_seis"
+            android:id="@+id/txt_cuatro"
             android:layout_width="50dp"
             android:layout_height="85dp"
+            android:layout_marginEnd="50dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
@@ -31,45 +32,71 @@
             android:maxLength="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.218"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.451" />
-
-        <EditText
-            android:id="@+id/txt_cinco"
-            android:layout_width="50dp"
-            android:layout_height="85dp"
-            android:background="@drawable/bordes"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.396"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.453" />
+            app:layout_constraintVertical_bias="0.334" />
 
         <EditText
             android:id="@+id/txt_tres"
             android:layout_width="50dp"
             android:layout_height="85dp"
+            android:layout_marginEnd="4dp"
             android:background="@drawable/bordes"
             android:ems="10"
             android:gravity="center"
             android:inputType="number"
             android:maxLength="1"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.044"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_seis"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.449" />
+            app:layout_constraintVertical_bias="0.32999998" />
 
         <EditText
-            android:id="@+id/txt_cuatro"
+            android:id="@+id/txt_seis"
+            android:layout_width="50dp"
+            android:layout_height="85dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/bordes"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="number"
+            android:maxLength="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_cinco"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.334" />
+
+        <EditText
+            android:id="@+id/txt_cinco"
+            android:layout_width="50dp"
+            android:layout_height="85dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/bordes"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="number"
+            android:maxLength="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_dos"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.331" />
+
+        <EditText
+            android:id="@+id/txt_dos"
+            android:layout_width="50dp"
+            android:layout_height="85dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/bordes"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="number"
+            android:maxLength="1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_uno"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.334" />
+
+        <EditText
+            android:id="@+id/txt_uno"
             android:layout_width="50dp"
             android:layout_height="85dp"
             android:background="@drawable/bordes"
@@ -77,12 +104,11 @@
             android:gravity="center"
             android:inputType="number"
             android:maxLength="1"
+            android:layout_marginEnd="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.925"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/txt_cuatro"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.451" />
+            app:layout_constraintVertical_bias="0.336" />
 
         <Button
             android:id="@+id/button3"
@@ -99,68 +125,18 @@
             app:layout_constraintVertical_bias="0.721"
             app:shapeAppearanceOverlay="@style/Button5" />
 
-        <EditText
-            android:id="@+id/txt_uno"
-            android:layout_width="50dp"
-            android:layout_height="85dp"
-            android:background="@drawable/bordes"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.753"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.453" />
-
-        <EditText
-            android:id="@+id/txt_dos"
-            android:layout_width="50dp"
-            android:layout_height="85dp"
-            android:background="@drawable/bordes"
-            android:ems="10"
-            android:gravity="center"
-            android:inputType="number"
-            android:maxLength="1"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.578"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.453" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
-        android:id="@+id/txt"
-
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="188dp"
-        android:layout_marginEnd="188dp"
-
-        android:text="Verificación"
-        android:textColor="@color/white"
-        android:textSize="34sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.424"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
-
-    <TextView
-        android:id="@+id/txt_verificacion"
-        android:layout_width="350dp"
+        android:id="@+id/ss"
+        android:layout_width="375dp"
         android:layout_height="100dp"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="10dp"
         android:gravity="center"
-        android:text="Por favor, escriba el  código de verificación enviando al +5959863935   "
+        android:text="Por favor, escriba el código de verificación enviando al "
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -169,5 +145,33 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.202" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Verificación"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.103" />
+
+    <TextView
+        android:id="@+id/txt_verificacion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.301" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
