--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -377,7 +377,7 @@
                             android:elevation="15dp"
                             android:gravity="center"
 
-                            android:onClick="validar_telefono"
+                            android:onClick="cargar"
                             android:text="Guardar"
                             android:textAllCaps="false"
                             android:textColor="@color/textColor"
