--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -95,7 +95,7 @@
                 android:gravity="center"
                 android:orientation="vertical"
                 android:padding="25dp"
-                android:visibility="gone">
+                android:visibility="visible">
 
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -204,7 +204,7 @@
                 android:orientation="vertical"
 
                 android:padding="15dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
 
                 <ScrollView
@@ -376,7 +376,7 @@
                             android:layout_marginEnd="24dp"
                             android:elevation="15dp"
                             android:gravity="center"
-                            android:onClick="cargar"
+                            android:onClick="validar_telefono"
                             android:text="Guardar"
                             android:textAllCaps="false"
                             android:textColor="@color/textColor"
