--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -39,7 +39,7 @@
 
 
         <TextView
-            android:id="@+id/tvTopMenuItemName"
+            android:id="@+id/ItemName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
