--- a/app/src/main/res/layout/menu_left_drawer.xml
+++ b/app/src/main/res/layout/menu_left_drawer.xml
@@ -35,7 +35,7 @@
         android:layout_height="10dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list"
+        android:id="@+id/lista"
         android:layout_width="240dp"
         android:layout_height="wrap_content" />
 
