--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -48,33 +48,36 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contenedorMenu"
+            android:id="@+id/contenedorProducto"
             android:layout_width="0dp"
-            android:layout_height="600dp"
+            android:layout_height="550dp"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="4dp"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cabecera"
+            app:layout_constraintTop_toBottomOf="@+id/txt_cabecera"
+            app:layout_constraintVertical_bias="0.39"
             tools:listitem="@layout/item_producto" />
 
         <TextView
-            android:id="@+id/cabecera"
+            android:id="@+id/txt_cabecera"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@drawable/search_edittext_background"
             android:padding="8dp"
             android:paddingStart="20dp"
             android:text="Categorias"
             android:textColor="#007e8d"
-            android:textSize="19sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
