--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -24,7 +24,7 @@
 
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imagen_promo"
             android:layout_width="150dp"
             android:layout_height="100dp"
             android:layout_marginEnd="20dp"
@@ -51,11 +51,11 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.69"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imagen_promo"
             tools:text="Institucional" />
 
         <ImageButton
-            android:id="@+id/botton_cardview"
+            android:id="@+id/botton_promo"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="8dp"
