--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -10,6 +10,57 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="320dp"
+            android:orientation="vertical"
+            android:layout_marginTop="14dp"
+
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/MenuSearchContainer"
+            app:layout_constraintVertical_bias="0.18">
+
+            <TextView
+                android:id="@+id/cabecera"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/search_edittext_background"
+                android:padding="8dp"
+                android:paddingStart="20dp"
+                android:text="Categorias"
+                android:textColor="#007e8d"
+                android:textSize="19sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/contenedorMenu"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+
+                android:orientation="horizontal"
+                android:visibility="visible"
+                tools:listitem="@layout/menu_item">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/contenedorTodos"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginBottom="4dp"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                tools:listitem="@layout/item_producto" />
+        </LinearLayout>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/MenuSearchContainer"
             android:layout_width="match_parent"
@@ -43,60 +94,11 @@
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="0.0" >
+
+            </SearchView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contenedorMenu"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cabecera"
-            tools:listitem="@layout/menu_item" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contenedorTodos"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="4dp"
-            android:orientation="horizontal"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cabecera"
-            app:layout_constraintVertical_bias="0.0"
-            tools:listitem="@layout/item_producto" />
-
-        <TextView
-            android:id="@+id/cabecera"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="5dp"
-            android:background="@drawable/search_edittext_background"
-            android:padding="8dp"
-            android:paddingStart="20dp"
-            android:text="Categorias"
-            android:textColor="#007e8d"
-            android:textSize="19sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/MenuSearchContainer" />
 
         <TextView
             android:id="@+id/cabecera2"
@@ -111,10 +113,12 @@
             android:textColor="#007e8d"
             android:textSize="19sp"
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contenedorMenu" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.589" />
 
         <TextView
             android:id="@+id/text"
@@ -126,7 +130,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cabecera"
             app:layout_constraintVertical_bias="0.763" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -142,7 +145,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cabecera2"
-            app:layout_constraintVertical_bias="0.112"
+            app:layout_constraintVertical_bias="0.877"
             tools:listitem="@layout/menu_promo" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
