--- a/app/src/main/res/layout/layout_botton_sheet.xml
+++ b/app/src/main/res/layout/layout_botton_sheet.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottomShetContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -19,7 +21,7 @@ android:layout_marginLeft="155dp"
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="77dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp">
 
@@ -29,14 +31,23 @@ android:layout_marginLeft="155dp"
             android:layout_marginTop="10dp"
             android:text="Hola Negro"></TextView>
 
-        <TextView
+        <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="250dp"
             android:layout_height="30dp"
 android:textColor="@color/black"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="¿A dónde enviamos tu pedido?"
-            android:textStyle="bold"></TextView>
+            android:textStyle="bold"></androidx.appcompat.widget.AppCompatTextView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/contenedorProducto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_direcciones"
+            android:focusableInTouchMode="true"/>
+
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
