--- a/app/src/main/res/drawable/switch_tumbs.xml
+++ b/app/src/main/res/drawable/switch_tumbs.xml
@@ -3,7 +3,8 @@
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#00FFFFFF"/>
-    <corners android:radius="50dp"/>
+    <corners android:topRightRadius="5dp"
+        android:topLeftRadius="5dp"/>
     <stroke android:width="1dp" android:color="@android:color/darker_gray"/>
 
 </shape>
